# ai

./: .gitignore  cuda_cpp_helloworld.c  diffusers_training_example_annotated.ipynb  torch1.ipynb  torch2.ipynb  train_diffusion_v2.ipynb
gan/: .gitignore  Cargo.toml  ai改画-素描-几何体.json  ai改画-素描-石膏像api.json  cn.txt
gan/fixtures/: Cargo.toml
gan/fixtures/conf/: app_cfg.toml  auto_cfg_template.toml  workflow_api_template.json
gan/fixtures/data/: ai改画-素描-几何体.json  ai改画-素描-石膏像api.json  class_names.json  control_nets.json  preprocessors.json  test_auto_cfg.toml  test_workflow_all.json  test_workflow_api.json  图生图api.json  文生图api.json  素描头像一白图生图.json  素描头像一白图生图api.json  美考api.json  美考图生图流程.json  美考文生图流程.json  美考通用流程.json
gan/fixtures/src/: lib.rs
gan/macros/: Cargo.toml
gan/macros/src/: lib.rs
gan/rfcs/: 00.md  dev.md
gan/src/: app.rs  app_args.rs  auto_cfg.rs  error.rs  generator.rs  lib.rs  main.rs
gan/src/comfy/: api.rs  control_net.rs  efficient.rs  image.rs  inputs.rs  ip_adapter.rs  latent.rs  lora.rs  mod.rs  node.rs  preprocessor.rs  sampler.rs  switch.rs  text.rs  vae.rs  workflow.rs
langchain/: demo.py
live/: LoRA_train_v2.ipynb
