[package]
name = "gan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }

[dev-dependencies]
ctor = "0.2"

[workspace]
members = [
    ".",      #
    "macros", #
]
