[package]
name = "gan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "./macros" }
axum = { version = "0.7", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
paste = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.21"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1"
futures-util = "0.3"
rand = "0.8"
toml = "0.8"

[dev-dependencies]
fixtures = { path = "./fixtures" }
ctor = "0.2"

[workspace]
members = [
    ".",        #
    "fixtures", #
    "macros",   #
]
